--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=LMS_demo
+spring.application.name=LMS
 
 # MySQL DB connection
-spring.datasource.url=jdbc:mysql://localhost:3306/lms_new?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/LMS?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=280604
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate config
